# coursework

backend/: .env  .gitignore  coursework.sqlite3  gunicorn_config.py  nginx.conf  pyproject.toml  requirements.txt
backend/actor/: admin.py  models.py  serializers.py  views.py
backend/actor/migrations/: 0001_initial.py  0002_initial.py  0003_remove_actor_nationality_remove_actor_surname_and_more.py
backend/authentication/: admin.py  apps.py  managers.py  models.py  serializers.py  views.py
backend/authentication/migrations/: 0001_initial.py  0002_initial.py  0002_user_groups_user_user_permissions.py  0003_alter_user_is_active_alter_user_is_staff_and_more.py  0003_remove_user_actor_remove_user_director_and_more.py  0004_remove_favouritedirector_director_and_more.py  0004_user_actor.py  0005_alter_user_actor_alter_user_director.py  0005_user_director.py
backend/comment/: models.py  serializers.py  views.py
backend/comment/migrations/: 0002_initial.py  0003_remove_comment_data_comment_date.py
backend/core/: asgi.py  routers.py  settings.py  urls.py  wsgi.py
backend/director/: admin.py  models.py  serializers.py  views.py
backend/director/migrations/: 0001_initial.py  0002_initial.py  0003_remove_director_nationality_director_height.py  0004_alter_director_birthplace_alter_director_born_and_more.py  0005_remove_director_surname.py
backend/env/: pyvenv.cfg
backend/genre/: admin.py  models.py  serializers.py  views.py
backend/genre/migrations/: 0001_initial.py  0002_initial.py  0003_alter_genre_cover_alter_genre_description.py
backend/studio/: admin.py  models.py  serializers.py  views.py
backend/studio/migrations/: 0001_initial.py  0002_initial.py  0003_alter_studio_cover_alter_studio_formation_year.py
backend/video/: admin.py  models.py  serializers.py  urls.py  views.py
backend/video/migrations/: 0001_initial.py  0002_initial.py  0003_video_image_url_x2_alter_video_v_type.py  0004_alter_video_budget_alter_video_fees.py  (+1 more)
backend/video_type/: admin.py  apps.py  models.py  serializers.py  views.py
frontend/: .eslintrc.json  (+4 more)
(+39 files in other folders)
