[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Max Kiselev <maaaaath@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dev = "my_package_name:log_revision.py"
